Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40729

cursorShape doesn't work with QQuickWidget

    XMLWordPrintable

Details

    Description

      MouseArea's cursorShape doesn't have any effect if used inside a QQuickWidget.
      A minimal project that reproduces the problem was attached.
      Tested this on a Windows 7 (64 bit) and Mac OS X 10.9.4

      Attachments

        1. TestCursorShapeApp.zip
          1 kB
          Victor Cernobai
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            vcernobai Victor Cernobai
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes